--- a/sass/twtcnangangcss/_touch_visitors.scss
+++ b/sass/twtcnangangcss/_touch_visitors.scss
@@ -15,6 +15,10 @@
     }
     .floor_btn{
         font-size: 1em;
+        li{
+            border-radius: 10px;
+            margin-bottom: 5px;
+        }
     }
     .ed_box{
         width: 33.3%;
