--- a/sass/twtcnangangcss/_calendar.scss
+++ b/sass/twtcnangangcss/_calendar.scss
@@ -64,22 +64,26 @@
     color: $twt-gray;
 }
 .ticket_price{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-column-gap:5px;
-    grid-row-gap:5px;
-}
-.price_bg{
-    text-align: center;
-    padding: 10px 0;
-    background-color: #f2f2f2;
-
+    // display: grid;
+    // grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    // grid-column-gap:5px;
+    // grid-row-gap:5px;
 }
 .ticket_poster{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin-bottom: 30px;
-    grid-column-gap:30px;
+    td{
+        vertical-align: top;
+        padding: 20px;
+        img{
+            border: 1px solid #cccccc;
+            width: 100%;
+        }
+    }
+
+    margin-bottom: 40px;
+    @include clearfix;
+    img{
+        margin-right: 40px;
+    }
 }
 .poster_pic{
     border: 1px solid #cccccc;
