--- a/sass/twtcnangangcss/_touch_news.scss
+++ b/sass/twtcnangangcss/_touch_news.scss
@@ -21,6 +21,9 @@
     .card-box{
         width: 46%;
     }
+    .card_title{
+        font-size: 1.2em;
+    }
 }
 @include respond-small-mobile{
     .card-box{
