--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -514,6 +514,7 @@ html {
     // grid-column-gap:40px;
     // grid-row-gap:40px;
     // margin-bottom: 70px;
+    margin-bottom: 50px;
 
     @include clearfix;
     a {
