--- a/sass/twtcnangangcss/_touch_faq.scss
+++ b/sass/twtcnangangcss/_touch_faq.scss
@@ -13,7 +13,12 @@
     .faq_continer{
         grid-template-columns: 100%;
     }
-
+    .faq_quation{
+        font-size: .8em;
+    }
+    .anser_font{
+        font-size: 1em;
+    }
 
 }
 @include respond-small-mobile{
