--- a/css/main.css
+++ b/css/main.css
@@ -2896,6 +2896,10 @@ html {
   padding: 10px 15px;
 }
 
+.fq_wid {
+  width: 10%;
+}
+
 .faq_down {
   padding: 10px 15px;
 }
@@ -2941,6 +2945,10 @@ html {
 
   .anser_font {
     font-size: 1em;
+  }
+
+  .fq_wid {
+    width: 18%;
   }
 }
 .public_box {
