--- a/sass/twtcnangangcss/_faq.scss
+++ b/sass/twtcnangangcss/_faq.scss
@@ -72,16 +72,18 @@
 }
 .faqtab{
     background-color: $twt-blue-title;
-    padding: 10px 15px;
+    padding: 12px 15px;
     color:#ffffff;
     text-align: center;
+    border-radius: 10px 0 10px 0;
 }
 .faq_quation{
+    font-size: 1.1em;
     padding: 10px 15px;
 
 }
 .fq_wid{
-    width: 10%;
+    width: 7%;
 }
 .faq_down{
 
@@ -91,9 +93,7 @@
     }
 }
 .news_faq_title{
-
     border-bottom: 1px solid #ffffff;
-    font-size: 1.5em;
     font-weight: bolder;
     color: #2d3b3f;
     background-color: #d1e9ed;
@@ -102,7 +102,7 @@
 }
 .anser_font{
     padding: 30px;
-    font-size: 1.2em;
+    font-size: 1.1em;
     line-height: 2;
     color: #5a5a5a;
     background-color: #f0f0f0;
