--- a/css/main.css
+++ b/css/main.css
@@ -404,7 +404,7 @@ html {
   text-align: center;
   padding: 5px 20px;
   margin-top: -30px;
-  z-index: 100;
+  z-index: 98;
   font-size: 2em;
   font-weight: bolder;
   color: #ffffff;
@@ -971,7 +971,7 @@ html {
 }
 
 .index_sidelabel {
-  z-index: 200;
+  z-index: 98;
   position: absolute;
   top: 70%;
   right: 0;
@@ -1095,6 +1095,10 @@ html {
   width: 100%;
 }
 
+.mobile_darkbg {
+  display: none;
+}
+
 @media only screen and (max-width: 1239px) {
   .listline {
     margin: 0 5px;
@@ -1151,6 +1155,49 @@ html {
   }
 }
 @media only screen and (max-width: 1096px) {
+  .mob_box {
+    width: 100px;
+    height: 60px;
+  }
+
+  .mobile_darkbg {
+    display: block;
+    background-color: rgba(0, 0, 0, 0.9);
+    width: 40%;
+    height: 100vh;
+    position: fixed;
+    z-index: 99;
+    overflow: scroll;
+    top: 0;
+    right: 0;
+  }
+
+  .mobile_darkbg_wrap {
+    zoom: 1;
+  }
+  .mobile_darkbg_wrap:after {
+    content: ".";
+    display: block;
+    clear: both;
+    height: 0;
+    overflow: hidden;
+    visibility: hidden;
+  }
+
+  .mobile_darkbg_box {
+    padding: 10px 30px;
+    width: 100%;
+    float: left;
+    color: #ffffff;
+  }
+  .mobile_darkbg_box li {
+    line-height: 2;
+    font-size: 1.2em;
+  }
+  .mobile_darkbg_box li i {
+    margin-right: 10px;
+  }
+
   .ubike_btn {
     width: 33%;
   }
@@ -1502,6 +1549,10 @@ html {
   }
 }
 @media only screen and (max-width: 480px) {
+  .mobile_darkbg {
+    width: 80%;
+  }
+
   .rent_bluebg {
     min-height: 500px;
     max-height: 604px;
