--- a/css/main.css
+++ b/css/main.css
@@ -692,6 +692,7 @@ html {
   font-size: 1.5em;
   font-weight: bold;
   margin-bottom: 8px;
+  color: #505050;
 }
 
 .event_sub-content {
@@ -710,6 +711,9 @@ html {
   display: inline-block;
   margin-right: 20px;
   font-size: 1.3em;
+}
+.evt_tab li a {
+  color: #505050;
 }
 .evt_tab li a:hover {
   text-decoration: none;
