--- a/sass/twtcnangangcss/_visitors.scss
+++ b/sass/twtcnangangcss/_visitors.scss
@@ -95,7 +95,7 @@
     float: left;
 }
 .link_pic{
-    height: 100px;
+    // height: 100px;
     border: 1px solid #ccc;
     margin-bottom: 10px;
     overflow: hidden;
