--- a/sass/twtcnangangcss/_calendar.scss
+++ b/sass/twtcnangangcss/_calendar.scss
@@ -121,3 +121,13 @@
         }
     }
 }
+.eventpost_wrap{
+    a{
+        &:hover{
+            text-decoration: none;
+        }
+        &:focus{
+            text-decoration: none;
+        }
+    }
+}
