--- a/sass/twtcnangangcss/_touch_twtcnangang.scss
+++ b/sass/twtcnangangcss/_touch_twtcnangang.scss
@@ -54,7 +54,7 @@
     }
     .mobile_darkbg{
         display: block;
-        background-color: rgba(0,0,0,.9);
+        background-color:#89b0d0;
         width: 40%;
         height: 100vh;
         position: fixed;
