--- a/css/main.css
+++ b/css/main.css
@@ -1166,7 +1166,7 @@ html {
 
   .mobile_darkbg {
     display: block;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: #89b0d0;
     width: 40%;
     height: 100vh;
     position: fixed;
