--- a/css/main.css
+++ b/css/main.css
@@ -2782,6 +2782,9 @@ html {
   font-size: 1.5em;
   font-weight: bolder;
   margin-bottom: 10px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .calen-font {
