--- a/sass/twtcnangangcss/_calendar.scss
+++ b/sass/twtcnangangcss/_calendar.scss
@@ -58,6 +58,9 @@
     font-size: 1.5em;
     font-weight: bolder;
     margin-bottom: 10px;
+    overflow: hidden;
+    white-space:nowrap;
+    text-overflow:ellipsis;
 }
 .calen-font{
     font-size: 1.1em;
