--- a/css/main.css
+++ b/css/main.css
@@ -693,6 +693,9 @@ html {
   font-weight: bold;
   margin-bottom: 8px;
   color: #505050;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .event_sub-content {
