--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -576,6 +576,9 @@ html {
     font-weight: bold;
     margin-bottom: 8px;
     color: #505050;
+    overflow:hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .event_sub-content{
     font-size: 1.1em;
