--- a/css/main.css
+++ b/css/main.css
@@ -3926,6 +3926,18 @@ html {
   width: 100%;
 }
 
+.meet_gray {
+  background: #cccccc;
+}
+.meet_gray:hover {
+  transition: all 0.5s;
+  background: #50acf3;
+  background: -moz-linear-gradient(top, #50acf3 0%, #5ebcc7 100%);
+  background: -webkit-linear-gradient(top, #50acf3 0%, #5ebcc7 100%);
+  background: linear-gradient(to bottom, #50acf3 0%, #5ebcc7 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#50acf3', endColorstr='#5ebcc7',GradientType=0 );
+}
+
 .meet_font {
   font-size: 1.5em;
   font-weight: bolder;
@@ -3951,6 +3963,11 @@ html {
 .step_one img {
   width: 100%;
   margin-top: -50px;
+}
+
+.meet_center {
+  font-size: 1.2em;
+  font-weight: bolder;
 }
 
 @media only screen and (max-width: 768px) {
