motifly index video

--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -157,6 +157,10 @@ html {
     height: 0;
     overflow: hidden;
     z-index: -1;
+    video{
+        margin-top: -116px;
+
+    }
 }
 
 .video-container embed,
