--- a/css/main.css
+++ b/css/main.css
@@ -238,6 +238,9 @@ html {
   overflow: hidden;
   z-index: -1;
 }
+.video-container video {
+  margin-top: -116px;
+}
 
 .video-container embed,
 .video-container iframe,
