--- a/sass/define/___var.scss
+++ b/sass/define/___var.scss
@@ -138,3 +138,6 @@ $twt-draygray:#999;
 $twt-blue-sfont:#41759a;
 $twt-blue-title:#2da4c5;
 $twt-yellow:#fcca43;
+
+$menu-width-pad:40%;
+$menu-width-mobile:80%;
