--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -955,3 +955,12 @@ html {
 .mobile_darkbg{
     display: none;
 }
+
+.pagemask{
+  position: fixed;
+  background: rgba(0,0,0,0.7);
+  width:100vw;
+  height:100vh;
+  z-index: 99;
+  display: none;
+}
