--- a/sass/twtcnangangcss/_aboutus.scss
+++ b/sass/twtcnangangcss/_aboutus.scss
@@ -37,13 +37,13 @@
 .big_lightbanner{
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    //overflow: hidden;
     margin-bottom: 100px;
     position: relative;
 }
 .light_bn{
     width: 100%;
-    margin-right: 30px;
+    //margin-right: 30px;
     text-align: center;
      display: inline-block;
      /* Center slide text vertically */
@@ -68,6 +68,7 @@
     top:50%;
     right:0;
     margin-top: -10px;
+    z-index: 100;
     i{
         font-size: 5em;
         color: #ffffff;
@@ -78,6 +79,7 @@
     top:50%;
     left:0;
     margin-top: -10px;
+    z-index: 100;
     i{
         font-size: 5em;
         color: #ffffff;
