--- a/css/main.css
+++ b/css/main.css
@@ -779,7 +779,7 @@ html {
   margin-right: -350px;
   width: 500px;
   height: 300px;
-  background-image: url("../images/viewall.jpg");
+  background-image: url("../images/viewall2.jpg");
   background-size: cover;
 }
 .view_vr img {
