--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -659,7 +659,7 @@ html {
     margin-right: -350px;
     width: 500px;
     height: 300px;
-    background-image: url("../images/viewall.jpg");
+    background-image: url("../images/viewall2.jpg");
     background-size: cover;
     img{
         width: 100%;
