--- a/sass/twtcnangangcss/_aboutus.scss
+++ b/sass/twtcnangangcss/_aboutus.scss
@@ -244,3 +244,12 @@
         }
     }
 }
+.tran_about{
+    li{
+        width: 25%;
+        float: left;
+    }
+}
+.aboutkeke{
+    @include clearfix;
+}
