--- a/css/main.css
+++ b/css/main.css
@@ -3589,7 +3589,35 @@ html {
   color: #999;
 }
 
+.tran_about li {
+  width: 25%;
+  float: left;
+}
+
+.aboutkeke {
+  zoom: 1;
+}
+.aboutkeke:after {
+  content: ".";
+  display: block;
+  clear: both;
+  height: 0;
+  overflow: hidden;
+  visibility: hidden;
+}
+
+@media only screen and (max-width: 1096px) {
+  .tran_about li {
+    width: 33% !important;
+    float: left;
+  }
+}
 @media only screen and (max-width: 768px) {
+  .tran_about li {
+    width: 50% !important;
+    float: left;
+  }
+
   .contact_wrap {
     display: grid;
     grid-template-columns: 1fr;
@@ -3609,6 +3637,12 @@ html {
     width: 100%;
     margin-left: 0;
     margin-top: 40px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .tran_about li {
+    width: 100% !important;
+    float: left;
   }
 }
 .rental-calculator {
