add index anim and faq anim

--- a/css/main.css
+++ b/css/main.css
@@ -3012,6 +3012,7 @@ html {
   font-weight: bolder;
   color: #2d3b3f;
   background-color: #d1e9ed;
+  cursor: pointer;
 }
 .news_faq_title {
   zoom: 1;
