--- a/sass/twtcnangangcss/_aboutus.scss
+++ b/sass/twtcnangangcss/_aboutus.scss
@@ -253,3 +253,9 @@
 .aboutkeke{
     @include clearfix;
 }
+.bilding{
+    font-size: 1.5em;
+    color: $twt_blue_title;
+    font-weight: bolder;
+    margin-bottom: 30px;
+}
