--- a/css/main.css
+++ b/css/main.css
@@ -1923,6 +1923,7 @@ html {
 .widget-pic {
   margin-bottom: 20px;
   border: 1px solid #cccccc;
+  height: 50vw;
 }
 .widget-pic img {
   width: 100%;
