--- a/css/main.css
+++ b/css/main.css
@@ -4089,6 +4089,10 @@ html {
   margin-bottom: 20px;
 }
 
+.tk_center {
+  text-align: center;
+}
+
 @media only screen and (max-width: 768px) {
   .meet_bluebg {
     width: 100%;
