--- a/css/swiper.css
+++ b/css/swiper.css
@@ -77,7 +77,7 @@
   -ms-flex: 0 0 auto;
   flex-shrink: 0;
   width: 100%;
-  height: 300px;
+  /*height: 300px;*/
   /*height:100%;*/
   position: relative;
 }
