--- a/sass/twtcnangangcss/_calendar.scss
+++ b/sass/twtcnangangcss/_calendar.scss
@@ -142,6 +142,9 @@
     float: left;
     width: 60%;
     margin-right: 30px;
+    img{
+        width: 100%;
+    }
 }
 .calendr_event_right{
     float: left;
