--- a/sass/twtcnangangcss/_transportation.scss
+++ b/sass/twtcnangangcss/_transportation.scss
@@ -49,3 +49,19 @@
         width: 100%;
     }
 }
+.calendr_eventbn_wrap{
+    @include clearfix;
+
+}
+.calendr_event_left{
+    float: left;
+    width: 60%;
+    margin-right: 30px;
+    img{
+        width: 100%;
+    }
+}
+.calendr_event_right{
+    float: left;
+    width: 35%;
+}
