--- a/css/main.css
+++ b/css/main.css
@@ -334,6 +334,7 @@ html {
 
 .lili_box {
   margin: 10%;
+  margin-top: 120px;
 }
 
 .chun_logo {
@@ -1565,6 +1566,10 @@ html {
   }
 }
 @media only screen and (max-width: 480px) {
+  .lili_box {
+    margin-top: 30px;
+  }
+
   .mobile_darkbg {
     width: 80%;
     right: -80%;
