--- a/sass/twtcnangangcss/_touch_twtcnangang.scss
+++ b/sass/twtcnangangcss/_touch_twtcnangang.scss
@@ -379,6 +379,9 @@
             font-size: 1.1em;
         }
     }
+    .lili_box{
+        margin-top:30px;
+    }
 
 }
 @include respond-small-mobile{
