--- a/sass/twtcnangangcss/_transportation.scss
+++ b/sass/twtcnangangcss/_transportation.scss
@@ -54,14 +54,12 @@
 
 }
 .calendr_event_left{
-    float: left;
-    width: 60%;
-    margin-right: 30px;
+    margin-bottom: 30px;
     img{
         width: 100%;
     }
 }
 .calendr_event_right{
-    float: left;
-    width: 35%;
+    // float: left;
+    // width: 35%;
 }
