--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -19,6 +19,13 @@
     }
 
 }
+.m-page-news_bn{
+    background-image: url("../images/bgnews.jpg");
+    img{
+        width: 100%;
+    }
+
+}
 .m-page-left_bg{
     position: absolute;
     top:0;
