--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -320,6 +320,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-bottom: 40px;
+    grid-column-gap: 10px;
 }
 .clod_pic{
     img{
