--- a/css/main.css
+++ b/css/main.css
@@ -1655,6 +1655,15 @@ html {
 }
 
 .m-page-news_bn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 75%;
+  max-height: 450px;
+  background-size: cover;
+  height: 330px;
+  background-position: 131px -18px;
+  background-repeat: no-repeat;
   background-image: url("../images/bgnews.jpg");
 }
 .m-page-news_bn img {
