--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -12,7 +12,7 @@
     background-size: cover;
     background-image: url("../images/bgLeft.jpg");
     height: 330px;
-        background-position: 131px -18px;
+    background-position: 131px -18px;
     background-repeat: no-repeat;
     img{
         width: 100%;
@@ -20,6 +20,15 @@
 
 }
 .m-page-news_bn{
+    position: absolute;
+    top:0;
+    right:0;
+    width: 75%;
+    max-height:450px;
+    background-size: cover;
+    height: 330px;
+    background-position: 131px -18px;
+    background-repeat: no-repeat;
     background-image: url("../images/bgnews.jpg");
     img{
         width: 100%;
