--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -21,15 +21,15 @@
 }
 .m-page-news_bn{
     position: absolute;
-    top:0;
-    right:0;
-    width: 75%;
-    max-height:450px;
-    background-size: cover;
-    height: 330px;
-    background-position: 131px -18px;
-    background-repeat: no-repeat;
-    background-image: url("../images/bgnews.jpg");
+    top: 0;
+    right: 0;
+    width: 100%;
+    max-height: 450px;
+    // background-size: cover;
+    // height: 330px;
+    // background-position: 61px -158px;
+    // background-repeat: no-repeat;
+    // background-image: url(../images/bgnews.jpg);
     img{
         width: 100%;
     }
