--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -24,7 +24,8 @@
     top: 0;
     right: 0;
     width: 100%;
-    max-height: 450px;
+    max-height: 330px;
+    overflow: hidden;
     // background-size: cover;
     // height: 330px;
     // background-position: 61px -158px;
