--- a/css/main.css
+++ b/css/main.css
@@ -1659,7 +1659,8 @@ html {
   top: 0;
   right: 0;
   width: 100%;
-  max-height: 450px;
+  max-height: 330px;
+  overflow: hidden;
 }
 .m-page-news_bn img {
   width: 100%;
