--- a/sass/twtcnangangcss/_touch_organizers.scss
+++ b/sass/twtcnangangcss/_touch_organizers.scss
@@ -28,6 +28,18 @@
     }
 }
 @include respond-pad {
+    .m-page-news_bn{
+        background-image: url("../images/bgnews.jpg");
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        max-height: 330px;
+        overflow: hidden;
+        img{
+            width: 100%;
+        }
+    }
     .m-page_wrapper{
         padding: 2% 5%;
     }
