--- a/css/main.css
+++ b/css/main.css
@@ -1655,6 +1655,7 @@ html {
 }
 
 .m-page-news_bn {
+  background-image: url("../images/side_news.jpg");
   position: absolute;
   top: 0;
   right: 0;
@@ -2351,6 +2352,19 @@ html {
   }
 }
 @media only screen and (max-width: 1096px) {
+  .m-page-news_bn {
+    background-image: url("../images/bgnews.jpg");
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    max-height: 330px;
+    overflow: hidden;
+  }
+  .m-page-news_bn img {
+    width: 100%;
+  }
+
   .m-page_wrapper {
     padding: 2% 5%;
   }
