--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -20,17 +20,13 @@
 
 }
 .m-page-news_bn{
+    background-image: url("../images/side_news.jpg");
     position: absolute;
     top: 0;
     right: 0;
     width: 100%;
     max-height: 330px;
     overflow: hidden;
-    // background-size: cover;
-    // height: 330px;
-    // background-position: 61px -158px;
-    // background-repeat: no-repeat;
-    // background-image: url(../images/bgnews.jpg);
     img{
         width: 100%;
     }
