--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -25,7 +25,7 @@
     top: 0;
     right: 0;
     width: 100%;
-    max-height: 330px;
+    min-height: 330px;
     overflow: hidden;
     img{
         width: 100%;
