--- a/css/main.css
+++ b/css/main.css
@@ -1655,13 +1655,12 @@ html {
 }
 
 .m-page-news_bn {
-  background-image: url("../images/side_news.jpg");
+  background-image: url("../images/bgnews.jpg");
   position: absolute;
   top: 0;
   right: 0;
   width: 100%;
   min-height: 330px;
-  overflow: hidden;
 }
 .m-page-news_bn img {
   width: 100%;
