--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -26,6 +26,7 @@
     right: 0;
     width: 100%;
     min-height: 330px;
+    background-size: cover;
     background-repeat: no-repeat;
     img{
         width: 100%;
