--- a/css/main.css
+++ b/css/main.css
@@ -1661,6 +1661,7 @@ html {
   right: 0;
   width: 100%;
   min-height: 330px;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 .m-page-news_bn img {
