--- a/css/main.css
+++ b/css/main.css
@@ -1668,6 +1668,20 @@ html {
   width: 100%;
 }
 
+.m-page-event_bn {
+  background-image: url("../images/bgLeft_event.jpg");
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 70%;
+  min-height: 330px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.m-page-event_bn img {
+  width: 100%;
+}
+
 .m-page-left_bg {
   position: absolute;
   top: 0;
