--- a/css/main.css
+++ b/css/main.css
@@ -2367,6 +2367,18 @@ html {
   }
 }
 @media only screen and (max-width: 1096px) {
+  .m-page-event_bn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    max-height: 330px;
+    overflow: hidden;
+  }
+  .m-page-event_bn img {
+    width: 100%;
+  }
+
   .m-page-news_bn {
     background-image: url("../images/bgnews.jpg");
     position: absolute;
